Solve bug: posts where overlapping navbar menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,11 +11,6 @@ body {
 
 
 /* Navbar */
-.navbar {
-    padding-top: 0;
-    padding-bottom: 0;
-
-}
 
 .navbar-light .navbar-nav .nav-link {
     color: #0a58ca;
